[tool.poetry]
name = "10-1  git 19-3"
version = "0.1.0"
description = ""
authors = ["Artem Volkov <tirydarten@mail.ru>"]
readme = "README.md"
packages = [{include = "10"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
